@@ -552,11 +552,22 @@ class Test_FMUModelME1:
         cls.string1 = compile_fmu("StringModel1",os.path.join(path_to_mofiles,"TestString.mo"), version="1.0")
     
     @testattr(stddist_full = True)
+    def test_get_time_varying_variables(self):
+        model = load_fmu(self.rlc_circuit)
+        
+        [r,i,b] = model.get_model_time_varying_value_references()
+        [r_f, i_f, b_f] = model.get_model_time_varying_value_references(filter="*")
+        
+        assert len(r) == len(r_f)
+        assert len(i) == len(i_f)
+        assert len(b) == len(b_f)
+    
+    @testattr(stddist_full = True)
     def test_get_string(self):
-		model = load_fmu(self.string1)
-		
-		for i in range(100): #Test so that memory issues are detected
-			assert model.get("str")[0] == "hej"
+        model = load_fmu(self.string1)
+        
+        for i in range(100): #Test so that memory issues are detected
+            assert model.get("str")[0] == "hej"
     
     @testattr(stddist_full = True)
     def test_check_against_unneccesary_derivatives_eval(self):
